Bugfixing/Simplifications/Optimizations (--> FindBugs)
git-svn-id: http://isdb1.offis.uni-oldenburg.de/repos/odysseus/trunk@8620 aa0bda67-78ed-0310-a382-c5338b0f89ba

Former-commit-id: 3be63e6d3fd8857190be599138e6583739dc6e2f